--- a/jobtracker/jobtable/templates/jobtable/home.html
+++ b/jobtracker/jobtable/templates/jobtable/home.html
@@ -1,23 +1,16 @@
 {% extends 'base.html' %}
 {% block content %}
+<article>
     <h2>Recherches en cours:</h2>
     <div class="header">
         <p><a href="{% url 'create-prospect' %}">Nouveau prospect</a></p>
     </div>
     <div class="flux">
         {% if prospects %}
-            {% for prospect in prospects %}
-            <div class="prospect">
-                {% include 'jobtable/partials/prospect.html' with prospect=prospect %}
-                {% if prospect.answered is False %}
-                        <p><a href="{% url 'candidature' prospect.id %}">Préparer candidature</a></p>
-                {% else %}
-                    {% include 'jobtable/partials/candidature.html' with candidature=prospect.candidature %}
-                {% endif %}
-            </div>
-            {% endfor %}
+        {% include 'jobtable/partials/prospects.html' with prospects=prospects %}
         {% else %}
             <p>Contient la liste des entreprises démarchées</p>
         {% endif %}
     </div>
+</article>
 {% endblock content %}
