prospect list, add cleaned

--- a/jobtracker/jobtable/templates/jobtable/partials/prospects.html
+++ b/jobtracker/jobtable/templates/jobtable/partials/prospects.html
@@ -3,20 +3,20 @@
     <table id="basics">
         <thead>
             <tr>
-                <th><h3>Poste</h3></th>
                 <th><h3>Entreprise</h3></th>
-                <th><h3>Annonce</h3></th>
+                <th><h3>Activité</h3></th>
+                <th><h3>Taille</h3></th>
                 <th><h3>Site Web</h3></th>
-                 <th><h3>Couriel</h3></th>
+                <th><h3>Couriel</h3></th>
             </tr>
         </thead>
         <tbody>
         {% for prospect in prospects %}
             <tr>
-                <td>{{ prospect.job }}</td>
                 <td>{{ prospect.company }}</td>
-                <td><a href="{{ prospect.post_url }}">{{ prospect.source }}</a></td>
-                <td>{{ prospect.website }}</td>
+                <td>{{ prospect.activity }}</td>
+                <td>{{ prospect.size }}</td>
+                <td><a href="{{ prospect.website }}">{{ prospect.site_name }}</a></td>
                 <td>{{ prospect.email }}</td>
                 {% if prospect.answered is False %}
                 <td><a href="{% url 'candidature' prospect.id %}">Préparer candidature</a></td>
