--- a/jobtracker/static/style.css
+++ b/jobtracker/static/style.css
@@ -13,10 +13,21 @@ body {
 
 .link h3,
 button,
-main a {
+.header a {
     font-family:Arial, Helvetica, sans-serif;
     font-size: 1.17rem;
     font-weight: bold;
+}
+
+#id_image label,
+button,
+.header a {
+    color: white;
+    text-decoration: none;
+    background-color: black;
+    border: 2px solid gray;
+    border-style: outset;
+    padding: 2px 4px;
 }
 
 nav ul {
@@ -65,17 +76,6 @@ label {
     display: block;
 }
 
-#id_image label,
-button,
-main a {
-    color: white;
-    text-decoration: none;
-    background-color: black;
-    border: 2px solid gray;
-    border-style: outset;
-    padding: 2px 4px;
-}
-
 h2 {
     margin-bottom: 1rem;
     margin-top: 1rem;
@@ -88,9 +88,18 @@ h2 {
     align-items: center;
 }
 
+tr {
+    padding-bottom: 1em;
+}
+
 td,
 th {
     padding-right: 1em;
+}
+
+td a {
+    text-decoration: none;
+    color: lightblue;
 }
 
 .review,
