prospect change, delete incoming

--- a/jobtracker/jobtable/templates/jobtable/create_prospect.html
+++ b/jobtracker/jobtable/templates/jobtable/create_prospect.html
@@ -3,7 +3,7 @@
 {% block content %}
 <div class="create">
     <h2>Créer un Prospect</h2>
-    <div class="post" id="img-handler">
+    <div class="post">
         <form method="post" enctype="multipart/form-data">
             {{ form }}
             {% csrf_token %}
