basic funct working need update views and match app list with excel table

--- a/jobtracker/jobtable/templates/jobtable/partials/prospect.html
+++ b/jobtracker/jobtable/templates/jobtable/partials/prospect.html
@@ -1,3 +1,9 @@
 <div class="prospect">
-    <p>{{ prospect.job }}</p>
+    <h3>Entreprise</h3>
+    <ul>
+        <li>{{ prospect.company }}</li>
+        <li>{{ prospect.activity }}</li>
+        <li>{{ prospect.size }}</li>
+        <li>{{ prospect.comments }}</li>
+    </ul>
 </div>
