--- a/jobtracker/templates/partials/nav.html
+++ b/jobtracker/templates/partials/nav.html
@@ -1,6 +1,12 @@
 <nav>
     <ul>
         <li>
+            <a href="{% url 'list-prospects' %}">Prospects</a>
+        </li>
+        <li>
+            <a href="{% url 'application-list' %}">Candidatures</a>
+        </li>
+        <li>
             <a href="{% url 'jobs' %}">Jobs</a>
         </li>
         <li>
