--- a/jobtracker/jobtable/templates/jobtable/application_list.html
+++ b/jobtracker/jobtable/templates/jobtable/application_list.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 {% block content %}
 <article>
-    <h2>Candidature en cours:</h2>
+    <h2>Candidatures en cours:</h2>
     <div class="header">
         <p><a href="{% url 'application-create' %}">Nouvelle candidature</a></p>
     </div>
