--- a/jobtracker/jobtable/templates/jobtable/partials/contact_list.html
+++ b/jobtracker/jobtable/templates/jobtable/partials/contact_list.html
@@ -3,7 +3,7 @@
     {% if object_list %}
     <ul>
         {% for insider in object_list %}
-        <li>{{ insider.contact.name }}</li>
+        {% include 'jobtable/partials/contact.html' with contact=insider.contact %}
         {% endfor %}
     </ul>
     {% else %}
