--- a/jobtracker/jobtable/templates/jobtable/partials/application.html
+++ b/jobtracker/jobtable/templates/jobtable/partials/application.html
@@ -3,7 +3,7 @@
     <h3>Candidature</h3>
     <ul>
         <li>{{ application.job }}</li>
-        <li>{{ application.source }}</li>
+        <li><a href="{{ application.source_url }}">{{ application.source }}</a></li>
         <li>{{ application.comments }}</li>
     </ul>
 </div>
