--- a/jobtracker/jobtable/templates/jobtable/partials/applications.html
+++ b/jobtracker/jobtable/templates/jobtable/partials/applications.html
@@ -5,7 +5,11 @@
             <tr>
                 <th><h3>Poste</h3></th>
                 <th><h3>Entreprise</h3></th>
+                <th><h3></h3></th>
                 <th><h3>Source</h3></th>
+                <th><h3>Contact</h3></th>
+                <th><h3>Préparée</h3></th>
+                <th><h3>Envoyée</h3></th>
                 {% if actions %}
                 <th><h3>Actions</h3></th>
                 {% endif %}
@@ -16,7 +20,15 @@
             <tr>
                 <td><a href="{% url 'application-detail' application.id %}">{{ application.job }}</a></td>
                 <td>{{ application.prospect }}</td>
+                {% if application.source == "Spontanée" %}
+                <td>✆ Démarchage</td>
+                {% else %}
+                <td>📄 Annonce</td>
+                {% endif %}
                 <td><a href="{{ application.source_url }}">{{ application.source }}</a></td>
+                <td></td>
+                <td>✅</td>
+                <td>✅</td>
                 {% if actions %}
                 <td><a href="{% url 'application-update' application.id %}">Modifier</a></td>
                 {% endif %}
